@@ -68,6 +68,9 @@ BUGFIXES:
   ZOOKEEPER-508. proposals and commits for DIFF and Truncate messages from the
   leader to the followers is buggy. (mahadev and ben via mahadev)
 
+  ZOOKEEPER-518. DEBUG message for outstanding proposals in leader should be
+   moved to trace. (phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
